--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,20 @@
 [package]
 name = "raid_optimize"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+[lib]
+name = "raid_optimize"
+path = "src/lib.rs"
+
+[[bin]]
+name = "raid_optimize"
+path = "src/bin.rs"
+
 [dependencies]
+serde_derive = "1.0"
+serde = "1.0"
+serde-xml-rs = "0.3.1"
