--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,7 +26,7 @@ jobs:
   release:
     name: Create Github Release
     if: contains(github.ref, 'tags/v')
-    needs: [test]
+    #needs: [test]
     runs-on: ubuntu-latest
     steps:
     - name: Create Release
