--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,7 +25,7 @@ jobs:
 
   release:
     name: Create Github Release
-    if: contains(github.ref, 'tags/v')
+    if: contains(github.ref, 'tags/')
     #needs: [test]
     runs-on: ubuntu-latest
     steps:
@@ -49,7 +49,7 @@ jobs:
 
   publish:
     needs: [release]
-    if: contains(github.ref, 'tags/v')
+    if: contains(github.ref, 'tags/')
     name:  ${{ matrix.triple.target }}
     runs-on: ${{ matrix.triple.os }}
     strategy:
