--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,7 +25,7 @@ jobs:
 
   release:
     name: Create Github Release
-    #if: contains(github.ref, 'tags/')
+    if: contains(github.ref, 'tags/')
     #needs: [test]
     runs-on: ubuntu-latest
     steps:
@@ -50,7 +50,7 @@ jobs:
 
   publish:
     needs: [release]
-    #if: contains(github.ref, 'tags/')
+    if: contains(github.ref, 'tags/')
     name:  ${{ matrix.triple.target }}
     runs-on: ${{ matrix.triple.os }}
     strategy:
@@ -67,9 +67,6 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - uses: actions-rs/cargo@v1
-        with:
-          command: test
       - uses: actions-rs/cargo@v1
         with:
           command: build
