--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -97,4 +97,4 @@ jobs:
           upload_url: ${{ steps.get_release_info.outputs.upload_url }}
           asset_path: ./${{ matrix.triple.target }}.zip
           asset_name: ${{ steps.get_release_info.outputs.file_name }}-${{ matrix.rid }}.zip
-         # asset_content_type: application/zip
+         asset_content_type: application/zip
