--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,32 +1,32 @@
 on: [push]
 name: CI
 jobs:
-  #test:
-  #  name:  ${{ matrix.triple.target }}
-  #  runs-on: ${{ matrix.triple.os }}
-  #  strategy:
-  #    fail-fast: false
-  #    matrix:
-  #      triple:
-  #        # Tier 1 platforms
-  #        - { os: 'ubuntu-latest',  target: 'x86_64-unknown-linux-gnu', cross: false }
-  #        - { os: 'ubuntu-latest',  target: 'i686-unknown-linux-gnu',   cross: true }
-  #        - { os: 'macOS-latest',   target: 'x86_64-apple-darwin',      cross: false }
-  #        - { os: 'windows-latest', target: 'x86_64-pc-windows-msvc',   cross: false }
-  #  steps:
-  #    - uses: actions/checkout@v2
-  #    - uses: actions-rs/toolchain@v1
-  #      with:
-  #        toolchain: stable
-  #    - uses: actions-rs/cargo@v1
-  #      with:
-  #        command: test
+  test:
+    name:  ${{ matrix.triple.target }}
+    runs-on: ${{ matrix.triple.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        triple:
+          # Tier 1 platforms
+          - { os: 'ubuntu-latest',  target: 'x86_64-unknown-linux-gnu', cross: false }
+          - { os: 'ubuntu-latest',  target: 'i686-unknown-linux-gnu',   cross: true }
+          - { os: 'macOS-latest',   target: 'x86_64-apple-darwin',      cross: false }
+          - { os: 'windows-latest', target: 'x86_64-pc-windows-msvc',   cross: false }
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
   
 
   release:
     name: Create Github Release
     if: contains(github.ref, 'tags/')
-    #needs: [test]
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -49,7 +49,7 @@ jobs:
         path: release_url.txt
 
   publish:
-    needs: [release]
+    needs: [release,test]
     if: contains(github.ref, 'tags/')
     name:  ${{ matrix.triple.target }}
     runs-on: ${{ matrix.triple.os }}
