--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -73,7 +73,11 @@ jobs:
           args: --release --all-features --target=${{ matrix.triple.target }}
           use-cross: ${{ matrix.triple.cross }}
       - name: zip it
+        if: matrix.triple.os != 'windows-latest'
         run: zip ${{ matrix.triple.target }}.zip target/${{ matrix.triple.target }}/release/raid_optimize* README.md -r data
+      - name: zip it
+        run: 7z a ${{ matrix.triple.target }}.zip target/${{ matrix.triple.target }}/release/raid_optimize* README.md -r data
+        if: matrix.triple.os == 'windows-latest'
       
       - name: Load Release URL File from release job
         uses: actions/download-artifact@v1
