--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -99,5 +99,5 @@ jobs:
         with:
           upload_url: ${{ steps.get_release_info.outputs.upload_url }}
           asset_path: ./${{ matrix.triple.target }}.zip
-          asset_name: raid_optimize-${{ github.ref }}-${{ matrix.triple.target }}.zip
+          asset_name: raid_optimize-${{ github.ref_name }}-${{ matrix.triple.target }}.zip
           asset_content_type: application/zip
