--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -93,6 +93,16 @@ jobs:
         env:
           TAG_REF_NAME: ${{ github.ref }}
           REPOSITORY_NAME: ${{ github.repository }}
+        if: matrix.triple.os != 'windows-latest'
+      - name: Get Release File Name & Upload URL
+        id: get_release_info
+        run: |
+          value=`type release_url/release_url.txt`
+          echo ::set-output name=upload_url::$value
+        env:
+          TAG_REF_NAME: ${{ github.ref }}
+          REPOSITORY_NAME: ${{ github.repository }}
+        if: matrix.triple.os == 'windows-latest'
       - name: Upload Release Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1.0.1
