--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -94,16 +94,8 @@ jobs:
           TAG_REF_NAME: ${{ github.ref }}
           REPOSITORY_NAME: ${{ github.repository }}
         if: matrix.triple.os != 'windows-latest'
-      - name: Get Release File Name & Upload URL
-        id: get_release_info
-        run: |
-          value=`type release_url/release_url.txt`
-          echo ::set-output name=upload_url::$value
-        env:
-          TAG_REF_NAME: ${{ github.ref }}
-          REPOSITORY_NAME: ${{ github.repository }}
-        if: matrix.triple.os == 'windows-latest'
       - name: Upload Release Asset
+        if: matrix.triple.os != 'windows-latest'
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1.0.1
         env:
@@ -113,3 +105,25 @@ jobs:
           asset_path: ./${{ matrix.triple.target }}.zip
           asset_name: raid_optimize-${{ github.ref_name }}-${{ matrix.triple.target }}.zip
           asset_content_type: application/zip
+
+      - name: Get Release File Name & Upload URL
+        id: get_release_info_windows
+        run: |
+          $value = Get-Content release_url/release_url.txt
+          Write-Host "::set-output name=upload_url::$value"
+        env:
+          TAG_REF_NAME: ${{ github.ref }}
+          REPOSITORY_NAME: ${{ github.repository }}
+        if: matrix.triple.os == 'windows-latest'
+      - name: Upload Release Asset
+        if: matrix.triple.os == 'windows-latest'
+        id: upload-release-asset_windows 
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.get_release_info_windows.outputs.upload_url }}
+          asset_path: ./${{ matrix.triple.target }}.zip
+          asset_name: raid_optimize-${{ github.ref_name }}-${{ matrix.triple.target }}.zip
+          asset_content_type: application/zip
+
