--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,14 @@ name = "raid_optimize"
 path = "src/bin.rs"
 
 [dependencies]
-serde_derive = "1.0"
-serde = "1.0"
-serde-xml-rs = "0.3.1"
+serde_derive = "^1.0"
+serde = "^1.0"
+serde-xml-rs = "^0.3.1"
 rand = "*"
-log = "*"
-env_logger ="*"
-itertools ="*"
-argparse = "*"
-rayon = "*"
-indicatif = "*"
+log = "^0.4.20"
+env_logger ="^0.10.0"
+itertools ="^0.11.0"
+argparse = "^0.2.2"
+rayon = "^1.7.0"
+indicatif = "^0.17.6"
 prettytable-rs = "^0.10"
