--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ url ="*"
 reqwest = {version = "*", features = ["json"]}
 serde_json = "*"
 axum = "0.6.20"
+axum-server = "*"
 dioxus = "0.4.0"
 dioxus-router = "0.4.0"
 dioxus-liveview = { version = "0.4.0", features = ["axum"] }
