--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ serde = ">=1.0.100,<1.0.181" # from quick-xml
 quick-xml = { version = "^0.30.0", features = ["serialize" ,"serde-types"] }
 #serde-xml-rs = "*"
 rand = "*"
+chrono= "*"
+fermi = "*"
 log = "^0.4.20"
 env_logger ="^0.10.0"
 itertools ="^0.11.0"
