--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,6 +21,11 @@ jobs:
           toolchain: stable
       - uses: actions-rs/cargo@v1
         with:
+          command: build
+          args: --release --all-features --target=${{ matrix.triple.target }}
+          use-cross: ${{ matrix.triple.cross }}
+      - uses: actions-rs/cargo@v1
+        with:
           command: test
   
 
