--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,7 +11,7 @@ jobs:
         triple:
           # Tier 1 platforms
           - { os: 'ubuntu-latest',  target: 'x86_64-unknown-linux-gnu', cross: false }
-          - { os: 'ubuntu-latest',  target: 'i686-unknown-linux-gnu',   cross: true }
+          # - { os: 'ubuntu-latest',  target: 'i686-unknown-linux-gnu',   cross: true }
           - { os: 'macOS-latest',   target: 'x86_64-apple-darwin',      cross: false }
           - { os: 'windows-latest', target: 'x86_64-pc-windows-msvc',   cross: false }
     steps:
@@ -65,7 +65,7 @@ jobs:
         triple:
           # Tier 1 platforms
           - { os: 'ubuntu-latest',  target: 'x86_64-unknown-linux-gnu', cross: false }
-          - { os: 'ubuntu-latest',  target: 'i686-unknown-linux-gnu',   cross: true }
+          # - { os: 'ubuntu-latest',  target: 'i686-unknown-linux-gnu',   cross: true }
           - { os: 'macOS-latest',   target: 'x86_64-apple-darwin',      cross: false }
           - { os: 'windows-latest', target: 'x86_64-pc-windows-msvc',   cross: false }
     steps:
