Add login capabilities

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ strum = "^0.25"
 strum_macros = "^0.25"
 enum-map = "^2.6"
 enum-map-derive = "*"
+once_cell = "*"
 
 url ="*"
 reqwest = {version = "*", features = ["json"]}
