--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,6 +16,10 @@ jobs:
           - { os: 'windows-latest', target: 'x86_64-pc-windows-msvc',   cross: false }
     steps:
       - uses: actions/checkout@v2
+      - name: Unlock secrets
+        uses: sliteteam/github-action-git-crypt-unlock@1.2.0
+        env:
+          GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
@@ -36,6 +40,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Unlock secrets
+      uses: sliteteam/github-action-git-crypt-unlock@1.2.0
+      env:
+        GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -70,6 +78,10 @@ jobs:
           - { os: 'windows-latest', target: 'x86_64-pc-windows-msvc',   cross: false }
     steps:
       - uses: actions/checkout@v2
+      - name: Unlock secrets
+        uses: sliteteam/github-action-git-crypt-unlock@1.2.0
+        env:
+          GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
