--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,8 @@ path = "src/bin.rs"
 serde_derive = "^1.0"
 serde = ">=1.0.100,<1.0.181" # from quick-xml
 quick-xml = { version = "^0.30.0", features = ["serialize" ,"serde-types"] }
-#serde-xml-rs = "*"
-rand = "*"
-chrono= "*"
-fermi = "*"
+rand = "^0.8.5"
+chrono= "^0.4.31"
 log = "^0.4.20"
 env_logger ="^0.10.0"
 itertools ="^0.11.0"
@@ -32,19 +30,18 @@ prettytable-rs = "^0.10"
 strum = "^0.25"
 strum_macros = "^0.25"
 enum-map = "^2.6"
-enum-map-derive = "*"
-once_cell = "*"
+enum-map-derive = "^0.14.0"
 
-url ="*"
-reqwest = {version = "*", features = ["json"]}
-serde_json = "*"
+url ="^2.4.1"
+reqwest = {version = "^0.11.20", features = ["json"]}
+serde_json = "^1.0.107"
 axum = "^0.6.20"
-axum-server = "*"
+axum-server = "^0.5.1"
 dioxus = "^0.4.0"
 dioxus-router = "^0.4.0"
 dioxus-liveview = { version = "^0.4.0", features = ["axum"] }
 tokio = { version = "^1.32.0", features = ["full"] }
-open = "*"
+open = "^5.0.0"
 
 #[profile.release]
 #debug = true
