--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ path = "src/lib.rs"
 
 [[bin]]
 name = "raid_optimize"
-path = "src/bin.rs"
+path = "src/ui/bin.rs"
 
 [dependencies]
 serde_derive = "^1.0"
