--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,11 @@ jobs:
           - { os: 'macOS-latest',   target: 'x86_64-apple-darwin',      cross: false }
           - { os: 'windows-latest', target: 'x86_64-pc-windows-msvc',   cross: false }
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
+          ssh-key: ${{ secrets.ACCESS_TOKEN }}
+          persist-credentials: true
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
@@ -36,6 +40,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+        submodules: true
+        ssh-key: ${{ secrets.ACCESS_TOKEN }}
+        persist-credentials: true
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -70,6 +78,10 @@ jobs:
           - { os: 'windows-latest', target: 'x86_64-pc-windows-msvc',   cross: false }
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: true
+          ssh-key: ${{ secrets.ACCESS_TOKEN }}
+          persist-credentials: true
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
