--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "raid_optimize"
-version = "0.0.10"
+version = "0.0.12"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -25,7 +25,6 @@ itertools ="^0.11.0"
 argparse = "^0.2.2"
 rayon = "^1.7.0"
 indicatif = "^0.17.6"
-prettytable-rs = "^0.10"
 strum = "^0.25"
 strum_macros = "^0.25"
 enum-map = "^2.6"
@@ -42,6 +41,8 @@ dioxus = "^0.4.0"
 dioxus-router = "^0.4.0"
 dioxus-liveview = { version = "^0.4.0", features = ["axum"] }
 open = "^5.0.0"
+octocrab = "^0.31.1"
+semver = "^0.11.0"
 
 #[profile.release]
 #debug = true
