--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,8 @@ serde = ">=1.0.100,<1.0.181" # from quick-xml
 quick-xml = { version = "^0.30.0", features = ["serialize" ,"serde-types"] }
 rand = "^0.8.5"
 log = "^0.4.20"
-env_logger ="^0.10.0"
+env_logger = "^0.10.0"
+simple_logger = "^4.2.0"
 itertools ="^0.11.0"
 argparse = "^0.2.2"
 rayon = "^1.7.0"
