--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,20 +17,19 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          submodules: true
-          ssh-key: ${{ secrets.ACCESS_TOKEN }}
-          persist-credentials: true
+          submodules: false
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
       - uses: actions-rs/cargo@v1
         with:
           command: build
-          args: --release --all-features --target=${{ matrix.triple.target }}
+          args: --lib --all-features --target=${{ matrix.triple.target }}
           use-cross: ${{ matrix.triple.cross }}
       - uses: actions-rs/cargo@v1
         with:
           command: test
+          args: --lib
   
 
   release:
