--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name:                   Generate code coverage
         run: |
-          cargo +nightly tarpaulin --verbose --all-features --workspace --timeout 3600 --out xml
+          cargo +nightly tarpaulin --verbose --all-features --lib --workspace --timeout 3600 --out xml
 
       - name:                   Upload to codecov.io
         uses:                   codecov/codecov-action@v3
