Add non gui bin.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ path = "src/lib.rs"
 [[bin]]
 name = "raid_optimize"
 path = "src/ui/bin.rs"
+#path = "src/bin.rs"
 
 [dependencies]
 derive_macro = { path = "src/derive_macro" }
